--- a/main.css
+++ b/main.css
@@ -21,6 +21,7 @@ h2,h3 {
 }
 h1,h2,h3 {
   line-height: .8em;
+}
 
 @media only screen and
 (min-width: 600px;) {
@@ -30,8 +31,13 @@ h1,h2,h3 {
 }
 
 @media only screen and
-(min-width: 900px;) {
+(min-width: 900px) {
   .text {
     max-width: 50vw;
   }
+}
+
+.home {
+  line-height: 75vw;
+  background-image: url("murray-campbell-29990.jpg");
 }
