--- a/main.css
+++ b/main.css
@@ -5,8 +5,9 @@ root {
 
 body {
   font-size: 1.25em;
-  line-height: 1.35em;
-    background-color: #4C6363;
+  line-height: 1.35;
+    background-color: #F6F6F6;
+    color: #000000;
 
 }
 h1 {
@@ -24,13 +25,21 @@ h2,h3 {
   font-size: 60px;
 }
 h1,h2,h3 {
-  line-height: 1.3em;
+  line-height: 1.3;
 }
 
 @media only screen and
 (min-width: 600px;) {
   .text {
     max-width: 75vw;
+  }
+  .chapter-pic {
+    float: right;
+    height: 50%;
+    Width: 50%;
+  }
+  main {
+  margin: auto;
   }
 }
 
@@ -39,6 +48,11 @@ h1,h2,h3 {
   .text {
     max-width: 50vw;
   }
+  .chapter-pic {
+    float: right;
+    height: 75%;
+    Width: 75%;
+  }
 }
 
 .home {
@@ -46,16 +60,18 @@ h1,h2,h3 {
   background-image: url("kiwihug-265638.jpg");
   background-position: center;
   background-size: cover;
+  background-color: #4C6363;
 }
 .home-text {
   font-size: 2.5em;
-  line-height: 1em;
+  line-height: 1;
   margin: 0 0 0 0;
+  background-color: #4C6363;
 }
 
 .home-header {
   margin: 0 0 0 0;
-  color: #000000;
+  color: #ffffff;
 }
 ul {
   list-style-type: none;
@@ -87,4 +103,10 @@ body {
 
 .chapter-pic {
   max-width: 100%;
+}
+
+.chapter-pic {
+  float: right;
+  height: 50%;
+  Width: 50%;
 }
