--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@ root {
 
 }
 
-body {
+.please {
   font-size: 1.25em;
   line-height: 1.35;
     background-color: #F6F6F6;
@@ -29,17 +29,15 @@ h1,h2,h3 {
 }
 
 @media only screen and
-(min-width: 600px;) {
+(min-width: 600px) {
   .text {
     max-width: 75vw;
+    margin: auto;
   }
   .chapter-pic {
     float: right;
     height: 50%;
     Width: 50%;
-  }
-  main {
-  margin: auto;
   }
 }
 
@@ -60,13 +58,11 @@ h1,h2,h3 {
   background-image: url("kiwihug-265638.jpg");
   background-position: center;
   background-size: cover;
-  background-color: #4C6363;
 }
 .home-text {
   font-size: 2.5em;
   line-height: 1;
   margin: 0 0 0 0;
-  background-color: #4C6363;
 }
 
 .home-header {
@@ -93,12 +89,13 @@ html * {
 }
 
 body {
+    background-color: #4C6363;
     margin: 0;
 }
 
 .home-nav {
   background-color: #803C15;
-  box-shadow: -11px -10px 4px -1px rgba(0,0,0,0.45);
+  box-shadow: -5px 4px 11px 1px rgba(0,0,0,0.75);
 }
 
 .chapter-pic {
@@ -109,4 +106,8 @@ body {
   float: right;
   height: 50%;
   Width: 50%;
+}
+a:link, a:visited {
+  color:#FFFFFF;
+  text-decoration: none;
 }
